# RapidDocs

./: .eslintignore  .eslintrc.js  .gitignore  .mrlint.root.json  .prettierrc.json  .vale.ini  CONTRIBUTING.md  README.md  SETUP.md  cspell-words.txt  cspell.json  generators-yml.schema.json  lint-staged.config.js  package.json  rapiddocs-generators.schema.json  tsconfig.eslint.json  tsconfig.json
.github/: CODEOWNERS  dependabot.yml
generators/python/: README.md  pyproject.toml  requirements.txt
generators/python/core_utilities/fastapi/: __init__.py  abstract_rapiddocs_service.py  route_args.py
generators/python/core_utilities/fastapi/exceptions/: __init__.py  handlers.py  unauthorized.py
generators/python/fastapi/: Dockerfile  versions.yml
generators/python/pydantic/: Dockerfile  versions.yml
generators/python/sdk/: CHANGELOG.md  Dockerfile  versions.yml
generators/python/src/rapiddocs_python/cli/: abstract_generator.py  generator_cli.py  publisher.py
generators/python/src/rapiddocs_python/codegen/: imports_manager.py  project.py  pyproject_toml.py  requirements_txt.py  source_file.py  writer_impl.py
generators/python/src/rapiddocs_python/declaration_referencer/: abstract_declaration_referencer.py
generators/python/tests/codegen/: get_relative_module_path_str.py  test_filepath.py  test_pyproject_toml.py
generators/python/tests/ir/: .gitignore  test_ir_deserialization.py
generators/python/tests/sdk/: test_custom_config.py  test_jsonable_encoder.py  test_root_client_generator.py
generators/python/tests/snippet_generator/: test_snippet_generator.py
(+14786 files in other folders)
